# resnet-50-cifar-10

./: .gitignore  README.md  pyproject.toml
src/resnet_50_cifar_10/: __init__.py  jupyter.ipynb  test.py  train.py
