[project]
name = "resnet-50-cifar-10"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "guilhermealwayscommit", email = "guilherme@neospace.ai" }
]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "tensorboard>=2.17.1",
    "numpy>=2.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/resnet_50_cifar_10"]
